--- a/css/fonts.css
+++ b/css/fonts.css
@@ -100,7 +100,7 @@ h1, h2, h3 {
     /* Features */
 
     .how-it-works-text{
-        font-size: 1rem;
+        /* font-size: 1rem; */
     }
 
     /* Testimonial */
