--- a/css/styles-mobile.css
+++ b/css/styles-mobile.css
@@ -138,7 +138,7 @@ body{
 .how-it-works-arrow{
     display: inline-flex;
     align-content: center;
-    padding-left: 5px;
+    margin-left: 5px;
 }
 
 
