--- a/css/styles-lg.css
+++ b/css/styles-lg.css
@@ -97,10 +97,12 @@
     }
 
     .how-it-works{
+        position: relative;
+        left: 5%;
         display: flex;
         justify-content: flex-start;
-        padding: 5%;
-        padding-left: 0;
+        padding: 5% 0;
+        transform: scale(1.1);
     }
 
     .how-it-works a{
@@ -118,7 +120,8 @@
     .how-it-works-arrow{
         display: inline-flex;
         align-content: center;
-        padding-left: 5px;
+        width: 16px;
+        height: 16px;
     }
 
 
